fix: overflow fixed

--- a/src/pages/Home/components/HowItWorks/style/HowItWorks.scss
+++ b/src/pages/Home/components/HowItWorks/style/HowItWorks.scss
@@ -257,6 +257,7 @@
           }
           h3 {
             color: var(--gray-900, #18191c);
+            overflow: hidden;
             font-family: DM Sans;
             font-size: 15px;
             font-style: normal;
